hphp/hack/test/typecheck/open_tuples/tuple_open_syntax_illegal.php.exp
ERROR: File "tuple_open_syntax_illegal.php", line 3, characters 16-30:
Cannot use unstable feature: `open_tuples` (Parsing[1002])
ERROR: File "tuple_open_syntax_illegal.php", line 4, characters 17-24:
Cannot use unstable feature: `open_tuples` (Parsing[1002])
ERROR: File "tuple_open_syntax_illegal.php", line 5, characters 12-24:
Cannot use unstable feature: `open_tuples` (Parsing[1002])
ERROR: File "tuple_open_syntax_illegal.php", line 5, characters 27-37:
Cannot use unstable feature: `open_tuples` (Parsing[1002])
ERROR: File "tuple_open_syntax_illegal.php", line 6, characters 21-35:
Cannot use unstable feature: `open_tuples` (Parsing[1002])
ERROR: File "tuple_open_syntax_illegal.php", line 6, characters 37-50:
Cannot use unstable feature: `open_tuples` (Parsing[1002])
ERROR: File "tuple_open_syntax_illegal.php", line 8, characters 12-24:
Cannot use unstable feature: `open_tuples` (Parsing[1002])
ERROR: File "tuple_open_syntax_illegal.php", line 9, characters 12-20:
Cannot use unstable feature: `open_tuples` (Parsing[1002])
