hphp/hack/test/typecheck/open_tuples/tuple_open_syntax_illegal.php
<?hh

type T1 = (int,optional string);
type T2 = (int, mixed...);
type T3 = (optional bool, arraykey...);
type T4 = (bool,int,optional string,optional float);
type T5 = (int);
type T6 = (optional bool);
type T7 = (string...);
